--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,19 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+main {
+  min-height: 80vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navlink {
+  font-size: 1rem !important;
+}
+
+.navheading {
+  font-size: 1.4rem !important;
+}
+
+.rating {
+  width: max-content;
+}
+
+.rating span {
+  margin: 0.1rem;
 }
