--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,3 +21,10 @@ main {
 .h3size {
   font-size: 2.8vh;
 }
+
+.round-spinner {
+  height: 20vh !important;
+  width: 20vh !important;
+  margin-left: 40%;
+  margin-top: 10%;
+}
