--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,3 +28,22 @@ main {
   margin-left: 40%;
   margin-top: 10%;
 }
+h1 {
+  font-size: 1.8rem;
+  padding: 1rem 0;
+}
+
+h2 {
+  font-size: 1.4rem;
+  padding: 0.5rem 0;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1200px) {
+  .product-page-section {
+    min-width: 350px;
+  }
+
+  .product-page-section:nth-child(3) {
+    margin: 20px 0 0 50%;
+  }
+}
