--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,12 +22,20 @@ main {
   font-size: 2.8vh;
 }
 
-.round-spinner {
+.round-spinner-small {
+  height: 5vh !important;
+  width: 5vh !important;
+  margin-left: 40%;
+  margin-top: 10%;
+}
+
+.round-spinner-large {
   height: 20vh !important;
   width: 20vh !important;
   margin-left: 40%;
   margin-top: 10%;
 }
+
 h1 {
   font-size: 1.8rem;
   padding: 1rem 0;
