--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -46,6 +46,10 @@ h2 {
   padding: 0.5rem 0;
 }
 
+strong {
+  font-weight: bold;
+}
+
 @media only screen and (min-width: 768px) and (max-width: 1200px) {
   .product-page-section {
     min-width: 350px;
