--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -54,6 +54,44 @@ strong {
   font-weight: bold;
 }
 
+/* carousel */
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+  display: flex;
+}
+.carousel-caption {
+  position: absolute;
+  top: 0;
+
+  box-sizing: border-box;
+}
+
+#carousel-h2 {
+  padding-top: 10px;
+  padding-bottom: 20px;
+  max-width: 100%;
+
+  color: #fff;
+}
+
+.carousel img {
+  height: 300px;
+  padding: 40px;
+  margin: 40px;
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.carousel a {
+  margin: 0 auto;
+}
+
+@media (max-width: 900px) {
+  .carousel-caption h2 {
+    font-size: 2.5vw;
+  }
+}
 @media only screen and (min-width: 768px) and (max-width: 1200px) {
   .product-page-section {
     min-width: 350px;
