--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -87,6 +87,11 @@ strong {
   margin: 0 auto;
 }
 
+th,
+td {
+  width: auto;
+}
+
 @media (max-width: 900px) {
   .carousel-caption h2 {
     font-size: 2.5vw;
